# wakeupmanager

./: ACPIEntry.cpp  ACPIEntry.h  CMakeLists.txt  README  README.md  TODO  USBEntry.cpp  USBEntry.h  WakekupService.cpp  WakeupConfig.cpp  WakeupConfig.h  WakeupHelper.cpp  WakeupKcm.cpp  WakeupKcm.h  WakeupManager.cpp  WakeupManager.h  configurewakeup.cpp  kcm_wakeup.desktop  main.cpp  wakeupmanager.actions  wakeupmanager.sh  wakeupmanagerui.rc
